@@ -134,6 +134,7 @@ Dropped booleans:
 `py-start-run-ipython-shell',
 `py-pylint-offer-current-p'
 `py-paragraph-fill-docstring-p'
+`py-enforce-output-buffer-p'
 
 New in version 6.1.3
 ---------------------
